--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -16,32 +16,19 @@ h1 {
     margin: 0 auto;
 }
 
-.menu-items,
-.image-pops{
+table, th, td {
+    border: 1px solid black;
     text-align: center;
+    vertical-align: center;
+    font-family: 'Raleway';
 }
 
-.menu-items img {
-    width: 75px;
+table {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.images img {
+    width: 100px;
     height: auto;
 }
-
-.buttons li{
-    background-color: orangered;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    display: inline-block;
-    font-size: 16px;
-}
-
-.images li{
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    display: inline-block;
-    font-size: 16px;
-}
-
-
-
