--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -2,19 +2,27 @@
     font-family: 'Raleway';
     src: url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap')
 }
+body {
+    background-image: url("../images/BG_Home.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+}
 
 h1 {
     font-family: 'Raleway';
     font-size: 3.5rem;
     text-align: center;
+    color: white;
 }
 
-.home-intro, 
-#description {
+.home-intro{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     width: 300px;
     text-align: center;
     margin: 0 auto;
+    color: white;
 }
 
 table, td {
@@ -33,8 +41,14 @@ td {
     height: 100px;
 }
 
+td a {
+    color: white;
+    text-decoration: none;
+}
+
 .images img {
     width: 1px;
     height: auto;
     opacity: 0;
+    filter: drop-shadow(0px 10px 10px black)
 }
