--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -42,10 +42,7 @@ td {
 }
 
 .buttons td {
-    background-color: orangered;
     height: 50px;
-    border-radius: 5px;
-    filter: drop-shadow(0px 10px 10px black)
 }
 
 .images td {
@@ -53,10 +50,25 @@ td {
 }
 
 td a {
+    background-color: orangered;
     color: white;
+    border-radius: 5px;
     text-decoration: none;
     width: 100%;
     padding: 15px 30px;
+    filter: drop-shadow(0px 10px 10px black)
+}
+
+td a:hover {
+    color: black;
+    background-color: aquamarine;
+    transition-duration: 1s;
+}
+
+td a:active {
+    color: black;
+    background-color: rgb(127, 178, 255);
+    transition-duration: 0s;
 }
 
 .images img {
