Refactor Skills layoyt

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -165,3 +165,40 @@ td a:active {
     color: aquamarine;
     text-decoration: none;
 }
+
+.resume {
+    width: 66%;
+    margin: 80px auto 0 auto;
+    padding: 0 20px 20px 20px;
+    color: white;
+    font-size: 18px;
+    font-family: Helvetica, Arial, sans-serif;
+    background-color: rgba(0,0,0,0.75);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 100px auto auto 100px auto auto 100px auto;
+    column-gap: 25px;
+}
+
+.resume h2,
+.skillImg {
+    grid-column: 1 / span 2;
+    font-size: 2rem;
+    font-family: 'Raleway';
+    text-align: center;
+    color: white;
+}
+
+.resume img {
+    margin: 0 auto;
+}
+
+.resume a {
+    color: orangered;
+    text-decoration: none;
+}
+
+.resume a:hover {
+    color: aquamarine;
+    text-decoration: none;
+}
