Fix styling for audition hub page links

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -245,3 +245,13 @@ td a:active {
     width: 500px;
     margin: 0 auto;
 }
+
+.auditionHub a {
+    color: orangered;
+    text-decoration: none;
+}
+
+.auditionHub a:hover {
+    color: aquamarine;
+    text-decoration: none;
+}
