Pre-format contact page

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -255,3 +255,40 @@ td a:active {
     color: aquamarine;
     text-decoration: none;
 }
+
+.contactInfo {
+    width: 66%;
+    margin: 80px auto 0 auto;
+    padding: 0 20px 20px 20px;
+    color: white;
+    font-size: 18px;
+    font-family: Helvetica, Arial, sans-serif;
+    background-color: rgba(0,0,0,0.75);
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 100px auto auto;
+    column-gap: 25px;
+}
+
+.contactInfo h2 {
+    grid-column: 1 / span 3;
+    font-size: 2rem;
+    font-family: 'Raleway';
+    text-align: center;
+    color: white;
+}
+
+.contactInfo img {
+    width: 500px;
+    margin: 0 auto;
+}
+
+.contactInfo a {
+    color: orangered;
+    text-decoration: none;
+}
+
+.contactInfo a:hover {
+    color: aquamarine;
+    text-decoration: none;
+}
